<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/color_background"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/spinnerTitleTextView"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:fontFamily="@font/sc_dream5"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="280dp"
        android:layout_height="45dp" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/engEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/eng_text" />

        <EditText
            android:id="@+id/korEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/kor_text" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@color/color_logo"
            android:text="@string/cancel_text"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/passButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_logo"
            android:text="@string/pass_text"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>