<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VocaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/appTitleTextView"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@color/color_logo"
            android:fontFamily="@font/sc_dream5"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/openMenuButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_menu_24"
            app:layout_constraintBottom_toBottomOf="@id/appTitleTextView"
            app:layout_constraintEnd_toEndOf="@id/appTitleTextView"
            app:layout_constraintTop_toTopOf="@id/appTitleTextView" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="0dp"
            app:tabSelectedTextColor="@color/color_logo"
            app:tabIndicatorColor="@color/color_logo"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appTitleTextView">

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:background="@color/color_logo"
        android:layout_width="200dp"
        android:layout_gravity="end"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/closeMenuButton"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_close_24"
                app:layout_constraintBottom_toBottomOf="@id/memberInfoTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/memberInfoTextView" />

            <TextView
                android:id="@+id/memberInfoTextView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/closeMenuButton"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/refreshTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/refresh_text"
            android:textSize="20sp" />

        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/insertTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/insert_text"
            android:textSize="20sp" />

        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/updateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/update_text"
            android:textSize="20sp" />

        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/deleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/delete_text"
            android:textSize="20sp" />

        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/logoutTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/logout_text"
            android:textSize="20sp" />

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>